rke2/web-server/blog/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: web-server
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "blog.hwcopeland.net"
  rules:
    - backendRefs:
        - name: blog
          port: 80
